--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <body>
     <h1>operators:</h1>
     <h2>Arithematic operators</h2>
+    <h5>+,-,*,/,%</h5>
     <h2>Logical operators</h2>
+    <h5>&&,||,!</h5>
     <h2>Comparison operators</h2>
+    <h5>==,===,>=,<=,!=,>,<,!==</h5>
     <h2>Bitwise operators</h2>
+    <h5>&,|,^,!,<<,>>,~</h5>
+    <h2>Ternary operators</h2>
+    <h5>?,:</h5>
     <script src="index.js"></script>
 </body>
 </html>
